syntax="proto3";

package NAlice.NSocialSharing;
option go_package = "a.yandex-team.ru/alice/paskills/social_sharing/proto/api";
option java_package = "ru.yandex.alice.social.sharing.proto";

import "alice/paskills/social_sharing/proto/api/web_page.proto";

message TWebPageTemplateData {
    // option (apphost_type) = "web_page_template_data";

    message TError {
        string Code = 1 [json_name = "code"];
    }

    oneof TemplateData {
        TScenarioSharePage Document = 1 [json_name = "document"];
        TError Error = 2 [json_name = "error"];
    }

    message TDevice {
        string DeviceId = 1 [json_name = "device_id"];
        string Room = 2 [json_name = "room"];
        string Type = 3 [json_name = "type"];
        string IconUrl = 4 [json_name = "icon_url"];
        string Name = 5 [json_name = "name"];
    }

    repeated TDevice Devices = 3 [json_name = "devices"];
    TDevice ActivatedDevice = 4 [json_name = "activated_device"];

    bool Autostart = 5 [json_name = "autostart", deprecated = true];
}
