syntax="proto3";

package NAlice.NSocialSharing.Context;
import "alice/paskills/social_sharing/proto/api/web_api.proto";

option go_package = "a.yandex-team.ru/alice/paskills/social_sharing/proto/context";
option java_package = "ru.yandex.alice.social.sharing.proto.context";
option java_outer_classname = "ListDevicesProto";

// TODO (ivangromov): move puid and user ticket to TListDevicesRequest TListDevicesRequest blackbox http response
message TListDevicesRequest {
    repeated string RequiredFeatures = 1 [json_name = "required_features"];
}

message TListDevicesResponse {
    repeated TWebPageTemplateData.TDevice Devices = 1 [json_name = "devices"];
}
